[gd_scene load_steps=4 format=3 uid="uid://jeh6mi1mdogy"]

[ext_resource type="Script" path="res://numberscript.gd" id="1_y5nrc"]
[ext_resource type="Script" path="res://SpinBox.gd" id="3_d3fmc"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="3_i7jb0"]

[node name="Control" type="GraphNode"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -753.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2
title = "Module"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 0.356863, 0.356863, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 0.0941176, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(0.388235, 0.388235, 0, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color(1, 0.0627451, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = true
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 0.282353, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("1_y5nrc")

[node name="TextEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 31
placeholder_text = "Module Name"

[node name="TextEdit2" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
placeholder_text = "IN: ELECTRICITY             OUT: PLASTIC PARTS"

[node name="TextEdit5" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
placeholder_text = "IN: ELECTRICITY             OUT: PLASTIC PARTS"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 2
text = "Test"
script = ExtResource("3_i7jb0")

[node name="SpinBox" type="SpinBox" parent="."]
layout_mode = 2
script = ExtResource("3_d3fmc")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="close_request" from="." to="." method="_on_Control_close_request"]
[connection signal="resize_request" from="." to="." method="_on_Control_resize_request"]
[connection signal="timeout" from="Timer" to="SpinBox" method="_on_timer_timeout"]
